--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/belleza.pura.png" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <img src="logo.png" alt="Belleza Pura Logo" style="height: 50px;">
+        <img src="assets/beleza transparente.png" alt="Belleza Pura Logo">
         <nav>
             <a href="início">início</a>
             <a href="produtos">Produtos</a>
@@ -28,28 +29,6 @@
         <button>Explore Agora</button>
     </main>
 
-    <section id="produtos" class="products">
-        <div class="product-card">
-            <img src="creme-hidratante.jpg" alt="Creme Hidratante Vegano">
-            <h3>Creme Hidratante Vegano</h3>
-            <p>Hidratação intensa com ingredientes naturais.</p>
-            <button>Saiba Mais</button>
-        </div>
-        <div class="product-card">
-            <img src="shampoo-natural.jpg" alt="Shampoo Natural">
-            <h3>Shampoo Natural</h3>
-            <p>Limpeza suave com óleos essenciais.</p>
-            <button>Saiba Mais</button>
-        </div>
-        <div class="product-card">
-            <img src="sabonete-artesanal.jpg" alt="Sabonete Artesanal">
-            <h3>Sabonete Artesanal</h3>
-            <p>Feito à mão com ingredientes orgânicos.</p>
-            <button>Saiba Mais</button>
-        </div>
-    </section>
-
-    <!-- Sobre a Marca -->
     <section id="sobre" style="padding: 50px 20px; text-align: center; background-color: #fff;">
         <h2>Sobre a Belleza Pura</h2>
         <p>A Belleza Pura é uma marca dedicada a oferecer cosméticos 100% veganos e sustentáveis. Nossa missão é
@@ -60,6 +39,46 @@
             <i>Ícones de Sustentabilidade (Exemplo: 100% Vegano, Sem Crueldade, Embalagens Sustentáveis)</i>
         </div>
     </section>
+    <section class="produtos">
+        <div class="produtos-itens">
+            <img src="assets/hidr.png" alt="Creme Hidratante Vegano">
+            <h3>Creme Hidratante Vegano</h3>
+            <p>Hidratação intensa com ingredientes naturais.</p>
+            <button>Saiba Mais</button>
+        </div>
+        <div class="produtos-itens">
+            <img src="assets/black-liquid-soap-container.png" alt="Shampoo Natural">
+            <h3>Shampoo Natural</h3>
+            <p>Limpeza suave com óleos essenciais.</p>
+            <button>Saiba Mais</button>
+        </div>
+        <div class="produtos-itens">
+            <img src="assets/perf.png" alt="Perfume">
+            <h3>Sabonete Artesanal</h3>
+            <p>Feito à mão com ingredientes orgânicos.</p>
+            <button>Saiba Mais</button>
+        </div>
+        <div class="produtos-itens">
+            <img src="assets/hidr.png" alt="Creme Hidratante Vegano">
+            <h3>Creme Hidratante Vegano</h3>
+            <p>Hidratação intensa com ingredientes naturais.</p>
+            <button>Saiba Mais</button>
+        </div>
+        <div class="produtos-itens">
+            <img src="assets/black-liquid-soap-container.png" alt="Shampoo Natural">
+            <h3>Shampoo Natural</h3>
+            <p>Limpeza suave com óleos essenciais.</p>
+            <button>Saiba Mais</button>
+        </div>
+        <div class="produtos-itens">
+            <img src="assets/perf.png" alt="Perfume">
+            <h3>Sabonete Artesanal</h3>
+            <p>Feito à mão com ingredientes orgânicos.</p>
+            <button>Saiba Mais</button>
+        </div>
+    </section>
+
+
 
     <!-- Formulário de Captura de Leads -->
     <section id="contato" class="form-container">
