--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,7 +53,7 @@
         </div>
         <div class="produtos-itens">
             <img src="assets/perf.png" alt="Perfume">
-            <h3>Sabonete Artesanal</h3>
+            <h3>Perfume Natural</h3>
             <p>Feito à mão com ingredientes orgânicos.</p>
             <button>Saiba Mais</button>
         </div>
@@ -72,24 +71,21 @@
         </div>
         <div class="produtos-itens">
             <img src="assets/perf.png" alt="Perfume">
-            <h3>Sabonete Artesanal</h3>
+            <h3>Perfume Natural</h3>
             <p>Feito à mão com ingredientes orgânicos.</p>
             <button>Saiba Mais</button>
         </div>
     </section>
 
-
-
-    <!-- Formulário de Captura de Leads -->
-    <section id="contato" class="form-container">
+    <section class="formulario">
         <h2>Fique por Dentro das Novidades!</h2>
         <p>Receba promoções exclusivas e informações sobre nossos produtos sustentáveis.</p>
-        <form id="leadForm">
-            <input type="text" id="name" name="name" placeholder="Seu Nome" required>
-            <input type="email" id="email" name="email" placeholder="Seu E-mail" required>
+        <form>
+            <input type="text" id="name" name="name" placeholder="Seu Nome">
+            <input type="email" id="email" name="email" placeholder="Seu E-mail">
             <button type="submit">Inscreva-se Agora</button>
         </form>
-        <div id="formMessage" style="margin-top: 20px;"></div>
+        
     </section>
 
     <footer>
