--- a/index.html
+++ b/index.html
@@ -28,17 +28,44 @@
         <button>Explore Agora</button>
     </main>
 
-    <section id="sobre" style="padding: 50px 20px; text-align: center; background-color: #fff;">
-        <h2>Sobre a Belleza Pura</h2>
+    <section class="texto-sobre">
+        <h2>Sobre a <div style="color: #86a94c; font-size: 40px;">Belleza Pura</div></h2>
         <p>A Belleza Pura é uma marca dedicada a oferecer cosméticos 100% veganos e sustentáveis. Nossa missão é
             promover beleza e bem-estar enquanto respeitamos o meio ambiente. Todos os nossos produtos são livres de
             crueldade animal e embalados em materiais recicláveis. Acreditamos em um mundo mais consciente e saudável
             para todos.</p>
+        <p>
+            Trabalhamos para redefinir o conceito de autocuidado, priorizando ingredientes naturais e processos éticos que garantam 
+            eficácia sem comprometer os recursos do planeta. Além disso, nos preocupamos com a inclusão e a diversidade, oferecendo 
+            produtos que atendem a diferentes tipos de pele e cabelo, sempre com foco em qualidade e inovação.
+        </p>
+        <p>
+            Nosso compromisso vai além dos produtos: promovemos ações educacionais e parcerias com ONGs ambientais, 
+            incentivando práticas de consumo responsável e ajudando a construir uma sociedade mais sustentável.
+        </p>
         <div>
             <i>Ícones de Sustentabilidade (Exemplo: 100% Vegano, Sem Crueldade, Embalagens Sustentáveis)</i>
         </div>
     </section>
     <section class="produtos">
+        <div class="produtos-itens">
+            <img src="assets/hidr.png" alt="Creme Hidratante Vegano">
+            <h3>Creme Hidratante Vegano</h3>
+            <p>Hidratação intensa com ingredientes naturais.</p>
+            <button>Saiba Mais</button>
+        </div>
+        <div class="produtos-itens">
+            <img src="assets/black-liquid-soap-container.png" alt="Shampoo Natural">
+            <h3>Shampoo Natural</h3>
+            <p>Limpeza suave com óleos essenciais.</p>
+            <button>Saiba Mais</button>
+        </div>
+        <div class="produtos-itens">
+            <img src="assets/perf.png" alt="Perfume">
+            <h3>Perfume Natural</h3>
+            <p>Feito à mão com ingredientes orgânicos.</p>
+            <button>Saiba Mais</button>
+        </div>
         <div class="produtos-itens">
             <img src="assets/hidr.png" alt="Creme Hidratante Vegano">
             <h3>Creme Hidratante Vegano</h3>
