fonts/sizes/funções

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <body>
     <header>
         <img src="assets/beleza transparente.png" alt="Belleza Pura Logo">
+        <section class="titulo">
+            <h1>Belezza Pura</h1>
+        </section>
         <nav>
-            <a href="início">início</a>
             <a href="produtos">Produtos</a>
             <a href="sobre">Sobre</a>
             <a href="contato">Contato</a>
@@ -43,9 +45,6 @@
             Nosso compromisso vai além dos produtos: promovemos ações educacionais e parcerias com ONGs ambientais, 
             incentivando práticas de consumo responsável e ajudando a construir uma sociedade mais sustentável.
         </p>
-        <div>
-            <i>Ícones de Sustentabilidade (Exemplo: 100% Vegano, Sem Crueldade, Embalagens Sustentáveis)</i>
-        </div>
     </section>
     <section class="produtos">
         <div class="produtos-itens">
@@ -119,9 +118,9 @@
         <div>
             <p>© 2024 Belleza Pura/Leonardo Bueno. Todos os direitos reservados.</p>
             <p>
-                <a href="https://instagram.com/bellezapura" target="_blank"
+                <a href="#" target="_blank"
                     style="color: #fff; margin-right: 10px;">Instagram</a>
-                <a href="https://facebook.com/bellezapura" target="_blank"
+                <a href="#" target="_blank"
                     style="color: #fff; margin-right: 10px;">Facebook</a>
                 <a href="https://wa.me/5514999020960" target="_blank" style="color: #fff;">Whatsapp</a>
             </p>
