--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
     </main>
 
     <section id="sobre" class="texto-sobre">
-        <h2>Sobre a <div style="color: #86a94c; font-size: 40px;">Belleza Pura</div>
-        </h2>
+        <h2>Sobre a <div class="belezza">Belleza Pura</div> </h2>
         <p>A Belleza Pura é uma marca dedicada a oferecer cosméticos 100% veganos e sustentáveis. Nossa missão é
             promover beleza e bem-estar enquanto respeitamos o meio ambiente. Todos os nossos produtos são livres de
             crueldade animal e embalados em materiais recicláveis. Acreditamos em um mundo mais consciente e saudável
@@ -109,7 +108,7 @@
 
     <section class="formulario">
         <h2>Fique por Dentro das Novidades!</h2>
-        <p>Receba promoções exclusivas e informações sobre nossos produtos sustentáveis.</p>
+        <p>Receba promoções exclusivas e informações sobre nossos produtos.</p>
         <form>
             <input type="text" id="name" name="name" placeholder="Seu Nome">
             <input type="email" id="email" name="email" placeholder="Seu E-mail">
