--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
 
     <section id="sobre" class="texto-sobre">
         <h2>Sobre a <div class="belezza">Belleza Pura</div> </h2>
-        <p>A Belleza Pura é uma marca dedicada a oferecer cosméticos 100% veganos e sustentáveis. Nossa missão é
+        <p>A Belleza Pura é uma marca dedicada a oferecer cosméticos <span class="belezza" >100% veganos e sustentáveis.</span> Nossa missão é
             promover beleza e bem-estar enquanto respeitamos o meio ambiente. Todos os nossos produtos são livres de
             crueldade animal e embalados em materiais recicláveis. Acreditamos em um mundo mais consciente e saudável
             para todos.</p>
         <p>
             Trabalhamos para redefinir o conceito de autocuidado, priorizando ingredientes naturais e processos éticos
             que garantam
-            eficácia sem comprometer os recursos do planeta. Além disso, nos preocupamos com a inclusão e a diversidade,
+            eficácia sem comprometer os recursos do planeta. Além disso,  <span class="belezza" >nos preocupamos com a inclusão e a diversidade</span>,
             oferecendo
             produtos que atendem a diferentes tipos de pele e cabelo, sempre com foco em qualidade e inovação.
         </p>
         <p>
             Nosso compromisso vai além dos produtos: promovemos ações educacionais e parcerias com ONGs ambientais,
-            incentivando práticas de consumo responsável e ajudando a construir uma sociedade mais sustentável.
+            incentivando práticas de consumo responsável e ajudando a construir <span class="belezza" > uma sociedade mais sustentável.</span>
         </p>
     </section>
     <section id="produtos" class="produtos">
